fixed nav bar link style for readability

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,10 +30,15 @@ header {
 a {
     box-shadow: inset 0 0 0 0 rgb(8, 109, 148);
     color: rgb(8, 109, 148);
-    margin: 0 -.25rem;
-    padding: 0 .5rem;
     transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
     text-decoration: none;
+}
+
+nav a {
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    margin: 0 -.25rem;
+    padding: 0 .5rem;
 }
 
 a:hover {
